# freecad-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
addon/FreeCADMCP/: Init.py  InitGui.py
addon/FreeCADMCP/libs/: materials.json
addon/FreeCADMCP/rpc_server/: __init__.py  commands.py  qt_compat.py  rpc_server.py  settings.py  task_queue.py  utils.py
addon/FreeCADMCP/rpc_server/handlers/: __init__.py  analysis_prep.py  animation.py  annotations.py  bc_tagging.py  blender_bridge.py  budget.py  defeaturing.py  diff.py  documents.py  drawing.py  execute.py  fem_export.py  geometry.py  granular.py  inspection.py  io.py  load_cases.py  materials.py  meshing.py  parametric.py  parts.py  render.py  report.py  simplification.py  sketch.py  video.py  views.py
docs/: ARCHITECTURE.md  INSTALL.md  TOOL_REFERENCE.md
examples/: 01_build_simple_bracket.md  02_simplify_for_thermal.md  03_render_with_callouts.md  04_elmer_export.md  05_parametric_sweep.md  06_drawings_and_report.md
src/freecad_mcp/: __init__.py  client.py  headless.py  prompts.py  server.py  state.py
src/freecad_mcp/tools/: __init__.py  advanced.py  documents.py  engineering.py  geometry.py  parts.py  sketch.py
tests/: test_smoke.py
