[project]
name = "freecad-mcp"
version = "0.2.0"
description = "FreeCAD MCP server for engineering workflows: geometry, defeaturing, materials, BC tagging, annotations, animations, and FEM/CFD export"
readme = "README.md"
authors = [
    { name = "TESSA LABS" },
    { name = "Lucas Salvador", email = "lucas.gf.salvador@gmail.com" },
]
license = { text = "MIT" }
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/tessalabs-space/freecad-mcp"
Repository = "https://github.com/tessalabs-space/freecad-mcp"
Issues = "https://github.com/tessalabs-space/freecad-mcp/issues"
dependencies = [
    "mcp[cli]>=1.12.2",
    "validators>=0.34.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
headless = [
    # FreeCAD Python bindings are installed via the FreeCAD distribution.
    # This extra just pulls numeric deps used by the headless runner.
    "scipy>=1.11",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
freecad-mcp = "freecad_mcp.server:main"

[tool.hatch.build.targets.sdist]
exclude = ["assets", "results", "tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/freecad_mcp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
